# FLIGHT_TEST

./: .env  Docker.dockerfile  LICENSE  README.md  airports_cleaned.json  build_files.sh  convert_json.py  convert_keras_tflite.py  db.sqlite3  docker-compose.yml  file_data.json  import_airports.py  manage.py  pyproject.toml  qaoa_angle_predictor.keras  qaoa_angle_predictor.tflite  replit.nix  requirements.txt  vercel.json
FILGHT/: SUPABASE_SETUP.md  admin.py  air_id_example.py  api_utils.py  asgi.py  models.py  serializers.py  settings.py  supabase_tables.sql  supabase_utils.py  urls.py  views.py  wsgi.py
FILGHT/management/commands/: create_supabase_tables.py  init_supabase.py
FILGHT/migrations/: 0001_initial.py  0002_flight_aircraft_type_flight_fuel_cost_route_and_more.py  0003_airport_timezone_flight_arrival_time_and_more.py  0004_alter_flight_options_remove_flight_cost_and_more.py  0005_fuelefficiency_operationalconstraint_safetyfactor_and_more.py  0006_airport_city_airport_country.py  0007_airport_type.py  0008_aircraftprofile_remove_route_fuel_efficiency_and_more.py
FILGHT/templates/: about.html  base.html  chat_bot.html  flight.html  flight_info.html  home.html  map.html  optimize.html  report.html
backend/: main.py
backend/routers/: airports.py
data/: api_flight.json
static/css/: airport_dropdown.css  chat_bot.css  flight.css  map.css  navbar.css  optimize.css  report.css
static/js/: flight_details_map.js  map.js  route_map.js
